# prefetching

./: .gitignore  .gitmodules  CMakeLists.txt  hashmap.cpp  lfb_size_benchmark.json  main.cpp  setup.sh
data/: hashmap_benchmark_cx01.json  lfb_size_simple_interleaving.json  lfb_size_simple_interleaving_amd.json  lfb_size_simple_interleaving_intel.json  lfb_size_simple_interleaving_local.json  prefetch_latencies_1.5GiB_cx01.json  prefetch_latencies_1GiB.json
data/lfb_batched/: lfb_size_batched_amd.json  lfb_size_batched_intel.json  lfb_size_batched_local.json
data/pc_benchmark/: pc_amd.json  pc_intel.json  pc_local.json  pc_local_average.json
notes_dump/: perf_amd_events
scripts/: delab_benchmark_pipeline.sh  delab_run_benchmark.sh
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  hashmap_benchmark.cpp  lfb_full_behavior.cpp  lfb_size_benchmark.cpp  lfb_size_benchmark_smt.cpp  memory_latencies.cpp  old_pointer_chasing.cpp  pointer_chasing.cpp  prefetch_latency.cpp  random_read_benchmark.cpp  tree_simulation_benchmark.cpp
src/lib/: CMakeLists.txt  coroutine.hpp  hashmap.cpp  hashmap.hpp  prefetching.cpp  prefetching.hpp  random_access.cpp  random_access.hpp  types.hpp
src/lib/numa/: CMakeLists.txt  interleaving_numa_memory_resource.cpp  interleaving_numa_memory_resource.hpp  numa_manager.cpp  numa_manager.hpp  numa_memory_resource.cpp  numa_memory_resource.hpp  static_numa_memory_resource.cpp  static_numa_memory_resource.hpp
src/lib/utils/: CMakeLists.txt  coroutine.hpp  numa_memory_resource.cpp  numa_memory_resource.hpp  profiler.cpp  runtime_config.hpp  test.json  utils.cpp
src/test/: CMakeLists.txt  test_memory_allocator_pmr.cpp
visualization/: compare_memory_latencies.py  helper.py  lfb_size.py  memory_latencies.py
